data/derived/fa15/progs/unify/prog1054.ml.out
Characters 8-19:
  let _ = digitsOfInt -222;;
          ^^^^^^^^^^^
Error: This expression has type int -> int list
       but an expression was expected of type int
